syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "TodoApi";

package TodoApi;

service TodoService {
    rpc AddTodo(AddTodoRequest) returns (AddTodoResponse);
    rpc GetAllTodo(google.protobuf.Empty) returns (GetAllTodoResponse);
}

// Ne vous souciez pas des nombres
message AddTodoRequest {
    string name = 1;
    string content = 2;
}

message AddTodoResponse {
    string status = 1;
    string errorMessage = 2;
}

// Repeated signifie array
message GetAllTodoResponse {
    repeated Todo todo = 1;
}

message Todo {
    string name = 1;
    string content = 2;
}
